Added shop add logic, used UserShop for authentication and audit trail